Tighten strictness for addresses module

--- a/mypy.ini
+++ b/mypy.ini
@@ -15,6 +15,10 @@ warn_unreachable = True
 
 # modules to be checked mostly more strongly than default:
 
+[mypy-parsl.addresses.*]
+disallow_untyped_defs = True
+disallow_any_decorated = True
+
 [mypy-parsl.dataflow.dflow.*]
 disallow_untyped_defs = True
 
