--- a/mypy.ini
+++ b/mypy.ini
@@ -87,6 +87,11 @@ disallow_untyped_defs = True
 disallow_subclassing_any = False
 # subclassing_any is because there is subclassing of a paramiko class
 
+[mypy-parsl.launchers.*]
+disallow_untyped_defs = True
+disallow_any_decorated = True
+
+
 [mypy-parsl.providers.provider_base.*]
 disallow_untyped_defs = True
 
