--- a/mypy.ini
+++ b/mypy.ini
@@ -24,6 +24,11 @@ disallow_untyped_defs = True
 
 warn_unreachable = False
 # this is because of some tangle of types
+# to do with channel script dirs: script dir
+# can be none at the start before initialisation,
+# but must be set later on, and I can't
+# represent that session type in mypy.
+# (or can I?!)
 
 [mypy-parsl.dataflow.error.*]
 disallow_untyped_defs = True
