Fix up fail cost in config and fn_hash in task record

--- a/mypy.ini
+++ b/mypy.ini
@@ -80,8 +80,10 @@ disallow_any_decorated = True
 
 [mypy-parsl.config.*]
 disallow_untyped_defs = True
-disallow_any_expr = True
-disallow_any_decorated = True
+# Any has to be allowed because TaskRecord now forms part of the type signature of config,
+# and task record has Any from the type of tasks args
+#disallow_any_expr = True
+#disallow_any_decorated = True
 
 [mypy-parsl.channels.base.*]
 disallow_untyped_defs = True
