ignore a couple of unsupported modules

--- a/mypy.ini
+++ b/mypy.ini
@@ -104,6 +104,12 @@ disallow_untyped_defs = True
 disallow_untyped_defs = True
 disallow_any_expr = True
 
+[mypy-parsl.executors.flux.*]
+ignore_errors = True
+
+[mypy-parsl.executors.extreme_scale.*]
+ignore_errors = True
+
 [mypy-parsl.serialize.*]
 disallow_untyped_defs = True
 
