--- a/mypy.ini
+++ b/mypy.ini
@@ -103,6 +103,11 @@ disallow_untyped_defs = True
 [mypy-parsl.executors.base.*]
 disallow_untyped_defs = True
 disallow_any_expr = True
+[mypy-parsl.serialize.*]
+disallow_untyped_defs = True
+
+
+# modules to be checked more weakly than default:
 
 [mypy-parsl.executors.flux.*]
 ignore_errors = True
@@ -110,11 +115,6 @@ ignore_errors = True
 [mypy-parsl.executors.extreme_scale.*]
 ignore_errors = True
 
-[mypy-parsl.serialize.*]
-disallow_untyped_defs = True
-
-
-# modules to be checked more weakly than default:
 
 [mypy-parsl.executors.workqueue.executor.*]
 check_untyped_defs = False
@@ -149,7 +149,7 @@ check_untyped_defs = False
 
 [mypy-parsl.utils.*]
 # because of some reasoning I don't understand in mypy
-warn_unreachable = False
+# warn_unreachable = False
 
 [mypy-non_existent.*]
 ignore_missing_imports = True
